--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "@types/geojson": "^7946.0.16",
+    "@types/supercluster": "^7.1.3",
+    "@vis.gl/react-google-maps": "^1.5.1",
+    "fast-deep-equal": "^3.1.3",
     "google-map-react": "^2.2.1",
     "next": "15.2.1",
     "react": "^19.0.0",
