--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "cwamap",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix --dir pages --dir src/app --dir src/components --dir lib --dir layouts --dir scripts"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "@types/geojson": "^7946.0.16",
     "@types/supercluster": "^7.1.3",
     "@vis.gl/react-google-maps": "^1.5.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "fast-deep-equal": "^3.1.3",
     "google-map-react": "^2.2.1",
     "next": "15.2.1",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-maps": "^9.4.5"
@@ -26,7 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.2.1",
     "tailwindcss": "^4",
     "typescript": "^5"
